@@ -87,13 +87,19 @@ directory (toc.html for the table of contents)</li>
   </li>
   <li>Thats it.</li>
 </ol>
-<h4>For Macintosh OS X users:</h4>
+<h4>For Macintosh OS X users (Tiger 10.4+):</h4>
 <ol>
+  <li>Get Berkeley DB using <a href="http://darwinports.org/">Darwinports.org</a>
+  ('sudo port install db4') or <a href="http://fink.sf.net/">Fink.sf.net</a></li>
+  <li>Get Qt for Aqua. Trolltech says must be qt-3.3.5
+so use 'fink --tree=unstable qt3mac'.</li>
   <li>Set your shell QTDIR environment variable to point where you
 installed Qt. <br>
-e.g. 'export QTDIR=/opt/local' or something similar.
+e.g. 'export QTDIR=/sw/lib/qt3mac' or something similar.
 Failure to set this properly will result in make errors. </li>
   <li>Unpack the Qtstalker source.</li>
+  <li>edit the "configure" file to be: <br />
+qmake "DEFINES += QT_NO_COMPAT" "CONFIG += qt" "macx:INCLUDEPATH += /opt/local/include/db4" "macx:LIBS += -L/opt/local/lib" -o Makefile qtstalker.pro</li>
   <li>./configure (this will create the Makefile) </li>
   <li>make </li>
   <li>sudo make install
@@ -109,7 +115,6 @@ directory (toc.html for the table of contents)</li>
   </li>
   <li>To start, type 'open /usr/bin/qtstalker'</li>
 </ol>
-<p>See <a href="macosx.html">notes</a> for using Qtstalker CVS and Mac OS X 10.4 Tiger.</a></p>
 <h3>Updating a previous version.</h3>
 <p>
 If you are updating from a previous source version already installed on
