@@ -3,5 +3,5 @@ plugin=CUS
 tabRow=1
 dateFlag=1
 Name=Engulfing Candles
-script=candles := BARS(Candle)|cdls := TALIB(CDLENGULFING)|r1 := UTIL(REF, cdls, 0)|candle := UTIL(COMP, r1, 1, GTEQ)|t1 := UTIL(COLOR, candle, candles, 1, red)|plot (candles,#ff0000,Candles,Candle)
-logScale=0
+script=candles := BARS(Candle,dimgray)|ceng := TALIB(CDLENGULFING)|c1 := UTIL(COMP, ceng, 1, GTEQ)|t1 := UTIL(COLOR, c1, candles, 1, red)|c2 := UTIL(COMP, ceng, -1, LTEQ)|t2 := UTIL(COLOR, c2, candles, 1, green)|plot (candles,dimgray,c-eng,Candle)
+logScale=1
